HLE-589 "SAMHÄLLSVETENSKAPLIGA,FÖRETAGSEKONOMISKA" missing space in label caused layout to break. Fixed with word-wrap + break-word.

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -190,11 +190,12 @@ body {
   width: @field-margin-left;
   h2 {
     color: @text-color;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: normal;
     text-transform: uppercase;
-    display: inline-block;
     margin-bottom: 0;
+    max-width: 230px;
+    word-wrap: break-word;
   }
 
   @media only screen and (max-width: @desktop-content-width) {
